# gnc

./: .gitignore  BACKLOG.md  BASELINE.md  BITSTREAM_SPEC.md  CLAUDE.md  Cargo.toml  ENTROPY.md  GNC_RESEARCH.md  GOALS.md  HUFFMAN_PLAN.md  LONG_LIST.md  MILESTONES.md  README.md  RESEARCH_LOG.md  STATUS_ROADMAP.md  _apply_tw_cache.py  entropy.md  instruction.md  rd_curve.csv  rd_curve_comparison.csv  rd_curve_noaq.csv
benches/: codec.rs
docs/: BITSTREAM_SPEC.md  HUFFMAN_PLAN.md  MEGA_KERNEL_PLAN.md  MINIPLAN_COMPRESSION.md  PIPELINE.md  TEMPORAL_WAVELET.md  baseline.csv
docs/archive/: ENTROPY.md  HUFFMAN_PLAN.md  INSTRUCTION.md  RESEARCH_LOG_2026-02-22_to_26.md
docs/decisions/: 0001-temporal-haar-adaptive-mul.md  0002-cfl-disabled-temporal-highpass.md  0003-wgsl-uniform-layout-verification.md
docs/visionary/: 2026-03-10-session-1.md
examples/web/: generate_demos.sh  generate_demos_chroma.sh  generate_demos_tw.sh  generate_demos_tw_bbb2min.sh  index.html  player.html  rootCA.crt  serve.sh
results/: bench_adaptive_mul.csv  bench_allI.csv  bench_allI_ref.csv  bench_fixed_mul2.csv  bench_haar.csv  bench_haar_fixed.csv  bench_parkjoy_q90_haar.csv  bench_parkjoy_q90_none.csv  benchmark_suite.csv  best_bbb_1080p.csv  best_blue_sky_1080p.csv  cfl_sweep.csv  codec_comparison.csv  combined_bluesky.csv  combined_touchdown.csv  deadzone_bluesky.csv  deadzone_touchdown.csv  entropy_bbb_1080p.csv  eval_bbb_1080p.csv  eval_blue_sky_1080p.csv  eval_kristensara_720p.csv  eval_test512.csv  eval_touchdown_1080p.csv  phase1_sweep.csv  phase2_multilevel.csv  phase2_rans_sweep.csv  subband_bluesky.csv  subband_touchdown.csv  wavelet_sweep.csv  wavelet_sweep_1080p.csv  zrl_blue_sky.csv  zrl_touchdown.csv
scripts/: benchmark_codecs.py  fetch_test_media.sh
src/: format.rs  gpu_util.rs  image_util.rs  lib.rs  main.rs  temporal.rs
src/bench/: bdrate.rs  codec_compare.rs  compare.rs  mod.rs  quality.rs  sequence_metrics.rs  throughput.rs
src/decoder/: buffer_cache.rs  checkpoint.rs  frame_data.rs  gpu_work.rs  mod.rs  pipeline.rs  pipeline_tests.rs
src/encoder/: adaptive.rs  bitplane.rs  block_transform.rs  buffer_cache.rs  cfl.rs  checkerboard_corr_diag.rs  chroma_resample.rs  color.rs  diagnostics.rs  entropy.rs  entropy_helpers.rs  fused_block.rs  huffman.rs  huffman_gpu.rs  interleave.rs  intra.rs  mod.rs  (+16 more)
test_material/: README.md  SOURCES.md  fetch_test_frames.sh
tests/: conformance.rs  golden_baselines.toml  quality_regression.rs  scene_cut_sequence.rs
(+68 files in other folders)
