[package]
name = "gnc"
version = "0.1.0"
edition = "2021"
description = "GPU-native broadcast video codec using wgpu compute shaders"

[dependencies]
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
image = "0.25"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
