[package]
name = "gnc"
version = "0.1.0"
edition = "2021"
description = "GPU-native broadcast video codec using wgpu compute shaders"

[dependencies]
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
image = "0.25"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "quality_regression"
path = "tests/quality_regression.rs"

[[bench]]
name = "codec"
harness = false

[profile.dev-fast]
inherits = "dev"
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"