[package]
name = "gnc"
version = "0.1.0"
edition = "2021"
description = "GPU-native broadcast video codec using wgpu compute shaders"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
image = "0.25"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document", "Element", "HtmlCanvasElement", "Window",
    "CanvasRenderingContext2d", "ImageData",
    "Performance",
    "console",
] }
js-sys = "0.3"
futures-channel = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "quality_regression"
path = "tests/quality_regression.rs"

[[test]]
name = "conformance"
path = "tests/conformance.rs"

[[bench]]
name = "codec"
harness = false

[profile.dev-fast]
inherits = "dev"
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"